# ai-engineer-club-submissions

./: README.md
week01-movie-agent-loop/: README.md  main.ipynb  pyproject.toml
week01-movie-expert/: README.md  main.ipynb  pyproject.toml
week01-movie-memory-bot/: README.md  main.ipynb  pyproject.toml
week02-life-coach/: .env.example  .gitignore  8.0_chat_ui.ipynb  8.3_file_search.ipynb  README.md  app.py  goals.txt  pyproject.toml  setup_vector_store.py
week03-restaurant-bot/: .gitignore  9.4_handoffs.ipynb  9.6_guardrails_complaints.ipynb  README.md  app.py  pyproject.toml  requirements.txt
week03-restaurant-bot/.streamlit/: config.toml
week04-storybook-maker/: .gitignore  README.md  pyproject.toml  storybook_run.ipynb
week04-storybook-maker/storybook_maker/: agent.py  models.py  prompt.py  tools.py
